--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     </main>
     <script src="player.js"></script>
     <script src="timer.js"></script>
-    //sketch.js needs to be last in this list - Jack
+    <script src="experience_bar.js"></script> 
+    <!--sketch.js needs to be last in this list - Jack-->
     <script src="sketch.js"></script> 
   </body>
 </html>
