--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <body>
     <main>
     </main>
+    <script src="bullet.js"></script>
     <script src="player.js"></script>
     <script src="timer.js"></script>
     //sketch.js needs to be last in this list - Jack
