Added Asteroids.js to index

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <body>
     <main>
     </main>
+    <script src="Asteroid.js"></script>
     <script src="bullet.js"></script>
     <script src="player.js"></script>
     <script src="timer.js"></script>
