--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
     </main>
     <script src="timer.js"></script>
-    <script src="Asteroid.js"></script>
+    <script src="asteroid.js"></script>
     <script src="bullet.js"></script>
     <script src="player.js"></script>
     <script src="experience_bar.js"></script> 
