--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="bullet.js"></script>
     <script src="player.js"></script>
     <script src="experience_bar.js"></script> 
+    <script src="levelUp.js"></script>
     <!--sketch.js needs to be last in this list - Jack-->
     <script src="sketch.js"></script> 
   </body>
