--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="player.js"></script>
     <script src="experience_bar.js"></script> 
     <script src="PlayerHealth.js"></script>
+    <script src="ScoreCounter.js"></script>
     <!--sketch.js needs to be last in this list - Jack-->
     <script src="sketch.js"></script> 
   </body>
