add the orbs and got collisions to work

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="levelUp.js"></script>
     <script src="PlayerHealth.js"></script>
     <script src="ScoreCounter.js"></script>
+    <script src="expOrb.js"></script>
     <!--sketch.js needs to be last in this list - Jack-->
     <script src="sketch.js"></script> 
   </body>
