--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </main>
     <script src="timer.js"></script>
     <script src="asteroid.js"></script>
+    <script src="Enemies.js"></script>
     <script src="bullet.js"></script>
     <script src="player.js"></script>
     <script src="experience_bar.js"></script> 
