started a simple test for chromedriver

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script src="ScoreCounter.js"></script>
     <script src="movement.js"></script>
     <script src="expOrb.js"></script>
+    <script src="chromeDriver.js"></script>
     <!--sketch.js needs to be last in this list - Jack-->
     <script src="sketch.js"></script> 
   </body>
