fixed the memory leak. added more chromedriver buttons. fixed despawning asteroids. reorganized exp bar

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script src="movement.js"></script>
     <script src="expOrb.js"></script>
     <script src="chromeDriver.js"></script>
+    <script src="memory.js"></script>
     <!--sketch.js needs to be last in this list - Jack-->
     <script src="sketch.js"></script> 
   </body>
