--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <script src="expOrb.js"></script>
     <script src="chromeDriver.js"></script>
     <script src="memory.js"></script>
+    <script src = "powerup.js"></script>
     <!--sketch.js needs to be last in this list - Jack-->
     <script src="sketch.js"></script> 
   </body>
