Added health pack

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script src="ScoreCounter.js"></script>
     <script src="movement.js"></script>
     <script src="expOrb.js"></script>
+    <script src="healthPack.js"></script>
     <script src="chromeDriver.js"></script>
     <script src="memory.js"></script>
     <script src = "powerup.js"></script>
