added stage two

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://p5play.org/v3/p5play.js"></script>
     <script src="path/to/p5.sound.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>a
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300;600&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" type="text/css" href="style.css">
