--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/addons/p5.sound.min.js"></script>
-    <script src="https://p5play.org/v3/planck.min.js"></script>
+   
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/addons/p5.sound.min.js"></script>
+    <!--<script src="https://p5play.org/v3/planck.min.js"></script>
     <script src="https://p5play.org/v3/p5play.js"></script>
+    
+    --->
+    <script src="library/planck.min.js"></script>
+    <script src="library/p5play.js"></script>
     <script src="path/to/p5.sound.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chai@latest/chai.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
